fix overflow on chromium based browsers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -214,7 +214,7 @@ input {
     position: absolute;
     top: 1200px;
     left: 0;
-    width: 100vw;
+    max-width: 100%;
     overflow: hidden;
     z-index: 500;
     pointer-events: none;
@@ -229,7 +229,7 @@ input {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    max-width: 100%;
     height: 100vh;
     overflow: hidden;
     z-index: 500;
